--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,9 +18,11 @@ jobs:
             HostName $SSH_HOST
             User $SSH_USER
             IdentityFile ~/.ssh/staging.key
-            StrictHostKeyChecking no
           END
         env:
           SSH_USER: ${{ secrets.SSH_USER }}
           SSH_KEY: ${{ secrets.SSH_PRIVATE_SECRET_KEY }}
-          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_HOST:
+            ${{ secrets.SSH_HOST }}
+
+            #StrictHostKeyChecking no
