--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,9 +22,9 @@ jobs:
         env:
           SSH_USER: ${{ secrets.SSH_USER }}
           SSH_KEY: ${{ secrets.SSH_PRIVATE_SECRET_KEY }}
-          SSH_HOST:
-            ${{ secrets.SSH_HOST }}
-      
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+
       - name: deploy with rsync
-        run rsync -avz ./readme.md ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/examples/
-            #StrictHostKeyChecking no
+        run:
+          rsync -avz ./readme.md ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/examples/
+          #StrictHostKeyChecking no
