--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,6 +18,7 @@ jobs:
             HostName $SSH_HOST
             User $SSH_USER
             IdentityFile ~/.ssh/staging.key
+            StrictHostKeyChecking no
           END
         env:
           SSH_USER: ${{ secrets.SSH_USER }}
@@ -25,6 +26,4 @@ jobs:
           SSH_HOST: ${{ secrets.SSH_HOST }}
 
       - name: deploy with rsync
-        run:
-          rsync -avz ./readme.md ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/examples/
-          #StrictHostKeyChecking no
+        run: rsync -avz ./readme.md ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/examples/
