--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,5 +25,5 @@ jobs:
           SSH_KEY: ${{ secrets.SSH_PRIVATE_SECRET_KEY }}
           SSH_HOST: ${{ secrets.SSH_HOST }}
 
-      - name: deploy with rsync
-        run: rsync -avz ./readme.md ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/examples/
+      - name: Stop the server
+        run: ssh staging 'sude system.ctl stop nginx'
