added a $ infront of host

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -26,4 +26,4 @@ jobs:
           SSH_HOST: ${{ secrets.SSH_HOST }}
 
       - name: Stop the server
-        run: ssh ${{ secrets.SSH_USER }}@{{ secrets.SSH_HOST }} ls -la
+        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} ls -la
