--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -2,26 +2,20 @@ name: remote update
 
 on: push
 jobs:
-  build:
-    name: Build
+  test:
+    name: Test
     # Specify on which operating system we want this workflow to run
     runs-on: ubuntu-20.04
     # The steps that will be excuted
     steps:
       - name: Configure SSH
-        run: |
-          mkdir -p ~/.ssh/
-          echo "$SSH_KEY" > ~/.ssh/staging.key
-          chmod 600 ~/.ssh/staging.key
-          cat >>~/.ssh/config <<END
-          Host staging
-            HostName $SSH_HOST
-            User $SSH_USER
-            IdentityFile ~/.ssh/staging.key
-            StrictHostKeyChecking no
-          END
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} ls -la
-        env:
-          SSH_USER: ${{ secrets.SSH_USER }}
-          SSH_KEY: ${{ secrets.SSH_PRIVATE_SECRET_KEY }}
-          SSH_HOST: ${{ secrets.SSH_HOST }}
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_PRIVATE_SECRET_KEY }}
+          known_hosts: "just-a-placeholder"
+
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secreys.SSH_HOST }}{% endraw %} >> ~/.ssh/known_hosts
+
+      - name: Execute ls -la
+        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} ls -la
