--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,4 +18,4 @@ jobs:
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: Execute ls -la
-        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} ls -la
+        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} echo "Gaat dit goed?" >> ~/kakbeer.txt
