--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -15,7 +15,7 @@ jobs:
           known_hosts: "just-a-placeholder"
 
       - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
 
       - name: Execute ls -la
         run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} echo "Gaat dit goed?" >> ~/test/kakbeer.txt
