--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and deploy
         env:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-        run: mkdir berenboot
+        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} mkdir berenboot
 
         # env:
         #   SSH_USER: ${{ secrets.SSH_USER }}
