--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,6 +22,8 @@ jobs:
           ssh-add ~/.ssh/github_actions
 
       - name: Build and deploy
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} mkdir berenboot
 
         # env:
