--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,7 +12,7 @@ jobs:
         env:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
           SSH_KEY: ${{ secrets.SSH_PRIVATE_SECRET_KEY }}
-          SSH_HOST: ${{ secrets.SSH_PRIVATE_SECRET_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
         run: |
           mkdir -p ~/.ssh/
           ssh-keyscan -H "SSH_HOST" > ~/.ssh/known_hosts
