--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -43,7 +43,7 @@ jobs:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run:
           #ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} bash scriptsample.sh
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }}
+          ssh ${{ secrets.SSH_USE }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }}
           && git checkout ${{ secrets.MAIN_BRANCH }}
           && git pull
           && exit"
