changed css for header -> added a third span, added the systemctl restart command step in run_test_yml

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -48,6 +48,11 @@ jobs:
           && git pull
           && exit"
 
+      - name: Restart app
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: ssh ${{ secrets.SSH_USEr }}@${{ secrets.SSH_HOST }} systemctl restart farm
+
       - name: cleanup
         run: rm -rf ~/.ssh
 
